<resources>
    <string name="app_name">Smart BWT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BWT TAIWAN Ltd.</string>
    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_device">Device</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">EMAIL</string>
    <string name="enter_email">Enter email</string>
    <string name="password">PASSWORD</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="re_enter_password">Re-Enter password</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="empty_password">Password cannot be empty.</string>
    <string name="match_password">Password does not match.</string>
    <string name="registered_success">Register Successful.</string>
    <string name="show_password">Show Password</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="sex">Gender</string>
    <string name="birth">Birthday</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Phone</string>
    <string name="country">Country</string>
    <string name="address">Your Address</string>
    <string name="enter_address">Address</string>
    <string name="already">Already have an account ,</string>
    <string name="login_here">Login here</string>
    <string name="already_create">Sorry, that email address is already used!</string>
    <string name="data_incomplete">Please complete the information</string>
    <string name="input_wrong">Error Signing : Email or Password is wrong.</string>
    <string name="remember_me">Remember Me</string>
    <string name="device_no">Device ID</string>
    <string name="device_name">Set Name</string>
    <string name="filter">Filter</string>
    <string name="filter_used">Filter Status</string>
    <string-array name="sex_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="country_array">
        <item>Country</item>
        <item>Austria</item>
        <item>Germany</item>
        <item>France</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Korea</item>
        <item>Mexico</item>
        <item>Norway</item>
        <item>Taiwan</item>
        <item>United Kiongdom</item>
    </string-array>
</resources>
