<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/acc_rlt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundDark"
    tools:context=".AccountActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/register_bk" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/count_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="invisible"
            android:textSize="18sp"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/warning_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:gravity="center|bottom"
                    android:textColor="#FF8099"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/txt_style"
                    android:drawableLeft="@drawable/icon_email"
                    android:drawablePadding="10dp"
                    android:textSize="18sp"
                    android:hint="@string/enter_email"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorDarkBlue"
                    android:maxLines="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

                <EditText
                    android:id="@+id/pwd_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/txt_style"
                    android:drawableLeft="@drawable/icon_password"
                    android:drawablePadding="10dp"
                    android:textSize="18sp"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/colorDarkBlue"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

                <EditText
                    android:id="@+id/pwd_confirm_edt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.4"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/txt_style"
                    android:drawableLeft="@drawable/icon_password"
                    android:drawablePadding="10dp"
                    android:textSize="18sp"
                    android:hint="@string/re_enter_password"
                    android:textColorHint="@color/colorDarkBlue"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

                <CheckBox
                    android:id="@+id/pwd_cbx"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.1"
                    android:paddingLeft="5dp"
                    android:text="@string/show_password"
                    android:textColor="@color/colorDarkBlue"
                    android:button="@drawable/password_checkbox_style"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:orientation="horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.4"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_marginRight="10dp"
                    android:gravity="center|right"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorDarkBlue"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/register_imv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/icon_next"
                    android:scaleType="centerInside"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_gravity="center"
                android:gravity="right"
                android:textSize="18sp"
                android:textColor="@color/colorDarkBlue"
                android:text="@string/already"/>

            <TextView
                android:id="@+id/login_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_gravity="center"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:textSize="18sp"
                android:textColor="#FFB3E6"
                android:text="@string/login_here"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>